# mnemograph

./: .gitignore  AGENT_PHILOSOPHY.md  CLAUDE.md  LICENSE  MEMORY_VCS_CLAUDE.md  PUBLISH_TO_MCP_REGISTRY.md  README.md  RENAME_GRAPHMEM_TO_MNEMOGRAPH.md  SETUP_CLAUDE_CODE.md  UNIVERSAL_MCP_COMPATIBILITY.md  USAGE_GUIDE_FOR_HUMANS.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
.specs/: PLUGIN_REFACTOR_SPEC.md
mnemograph-claude-code/: README.md  pyproject.toml
mnemograph-claude-code/.claude-plugin/: marketplace.json  plugin.json
mnemograph-claude-code/agents/: memory-init.md  memory-store.md
mnemograph-claude-code/commands/: recall.md  remember.md  visualize-memory-graph.md
mnemograph-claude-code/hooks/: hooks.json  session_start.py  stop_hook.py  user_prompt.py
mnemograph-claude-code/lib/: __init__.py  mnemograph_client.py  settings.py
notes/: v0_4-REFACTOR_SPEC.md
scripts/: seed.py
src/memory_engine/: __main__.py  cli.py  engine.py  events.py  models.py  server.py  vcs.py  vcs_cli.py  vectors.py
src/mnemograph/: __main__.py  branches.py  cli.py  constants.py  engine.py  events.py  linearize.py  models.py  query.py  retrieval.py  server.py  similarity.py  state.py  time_travel.py  timeutil.py  vcs.py  vcs_cli.py  vectors.py  viz.py  weights.py
src/mnemograph/data/: __init__.py  guide_seed.json
src/mnemograph/viz/: __init__.py  export.py
src/mnemograph/viz/templates/: graph.html
tests/: conftest.py  test_branches.py  test_cli.py  test_constants.py  test_engine.py  test_events.py  test_linearize.py  test_query.py  test_retrieval.py  test_rewind.py  test_state.py  test_time_travel.py  test_vcs.py  test_vectors.py  test_viz.py  test_weights.py
