[project]
name = "mnemograph"
version = "0.1.1"
description = "Event-sourced knowledge graph memory system for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.25.0",
    "pydantic>=2.12.5",
    "python-ulid>=3.1.0",
    "sentence-transformers>=5.2.0",
    "sqlite-vec>=0.1.6",
    "click>=8.0",
    "rich>=13.0",
    "gitpython>=3.1",
]

[project.scripts]
mnemograph = "mnemograph.server:main"
mnemograph-cli = "mnemograph.cli:main"
claude-mem = "mnemograph.vcs_cli:cli"

[project.urls]
Homepage = "https://github.com/tm42/mnemograph"
Repository = "https://github.com/tm42/mnemograph"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemograph"]
