[project]
name = "mnemograph"
version = "0.4.2"
description = "Event-sourced knowledge graph memory for AI coding agents (MCP server)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.25.0",
    "pydantic>=2.12.5",
    "python-ulid>=3.1.0",
    "sentence-transformers>=5.2.0",
    "sqlite-vec>=0.1.6",
    "click>=8.0",
    "rich>=13.0",
    "gitpython>=3.1",
    "python-dateutil>=2.8",
]

[project.scripts]
mnemograph-server = "mnemograph.server:main"  # MCP server entry point
mnemograph = "mnemograph.cli:cli"             # Primary CLI (avoids conflict with mg editor)

[project.urls]
Homepage = "https://github.com/tm42/mnemograph"
Repository = "https://github.com/tm42/mnemograph"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.11",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/mnemograph"]
omit = [
    "src/mnemograph/cli.py",      # CLI commands - tested via integration
    "src/mnemograph/server.py",   # MCP server - tested via integration
    "src/mnemograph/__main__.py", # Entry point
]

[tool.coverage.report]
fail_under = 75
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mnemograph"]
