[project]
name = "mnemograph-claude-code"
version = "0.5.1"
description = "Claude Code hook plugin for mnemograph persistent memory"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "tm42" }
]

dependencies = [
    "mnemograph>=0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
